--- a/css/style.css
+++ b/css/style.css
@@ -1,175 +1,263 @@
-* {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
-}
-body {
-	font-family: 'Poppins', sans-serif;
-	background-color: #f0f0f0;
-	overflow-x: auto; /* Enable horizontal scrolling */
-	overflow-y: hidden; /* Disable vertical scrolling */
-	height: 100vh;
-	margin: 0;
-}
-.container {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 100%;
-	width: 100%;
-}
-.tree {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	white-space: nowrap;
-}
-.tree ul {
-	padding-top: 20px;
-	position: relative;
-	display: flex;
-	flex-direction: row;
-	overflow: hidden;
-	white-space: nowrap;
-}
-.tree li {
-	display: inline-block;
-	text-align: center;
-	list-style-type: none;
-	position: relative;
-	padding: 10px;
-	vertical-align: top;
-}
-.tree li::before, .tree li::after {
-	content: '';
-	position: absolute;
-	top: 0;
-	right: 50%;
-	border-top: 1px solid #ccc;
-	width: 50%;
-	height: 10px;
-}
-.tree li::after {
-	right: auto;
-	left: 50%;
-	border-left: 1px solid #ccc;
-}
-.tree li:only-child::after, .tree li:only-child::before {
-	display: none;
-}
-.tree li:only-child {
-	padding-top: 0;
-}
-.tree li:first-child::before, .tree li:last-child::after {
-	border: 0 none;
-}
-.tree li:last-child::before {
-	border-right: 1px solid #ccc;
-	border-radius: 0 5px 0 0;
-}
-.tree li:first-child::after {
-	border-radius: 5px 0 0 0;
-}
-.tree ul ul::before {
-	content: '';
-	position: absolute;
-	top: 0;
-	left: 50%;
-	border-left: 1px solid #ccc;
-	width: 0;
-	height: 20px;
-}
-.tree li a {
-	border: 1px solid #ccc;
-	padding: 10px;
-	display: inline-grid;
-	border-radius: 5px;
-	text-decoration: none;
-	background: #fff;
-	transition: .5s;
-}
-.tree li a img {
-	width: 50px;
-	height: 50px;
-	margin-bottom: 10px !important;
-	border-radius: 50%;
-	margin: auto;
-}
-.tree li a span {
-	border: 1px solid #ccc;
-	border-radius: 5px;
-	color: #666;
-	padding: 8px;
-	font-size: 12px;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	font-weight: 500;
-}
-/* Hover Section */
-.tree li a:hover, .tree li a:hover i, .tree li a:hover span, .tree li a:hover+ul li a {
-	background: #c8e4f8;
-	color: #000;
-	border: 1px solid #94a0b4;
-}
-.tree li a:hover+ul li::after, .tree li a:hover+ul li::before, .tree li a:hover+ul::before, .tree li a:hover+ul ul::before {
-	border-color: #94a0b4;
-}
+        /* Estilos gerais */
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
 
-.menu {
-	position: fixed;
-	width: 100%;
-	height: 90px;
-	background-color: rgb(28, 139, 172);
-	display: flex;
-	z-index: 1000; 
-}
-.menu ul {
-	list-style: none;
-	display: flex;
-	margin-left: 130px;
-	padding: 0;
-}
-.menu-item {
-	position: relative;
-}
-.menu-item > a {
-	color: #fff;
-	text-decoration: none;
-	font-size: 20px;
-	padding: 30px;
-	display: block;
-	border-radius: 5px;
-	transition: background-color 0.3s;
-}
-.menu-item > a:hover {
-	background-color: #0056b3;
-}
-.menu-item ul {
-	position: absolute;
-	top: 100%;
-	left: 0;
-	background-color: rgb(28, 139, 172);
-	min-width: 200px;
-	display: none;
-	list-style: none;
-	padding: 0;
-	margin: 0;
-}
-.menu-item:hover ul {
-	display: block;
-}
-.menu-item ul li {
-	margin: 0;
-}
-.menu-item ul li a {
-	color: #fff;
-	text-decoration: none;
-	font-size: 16px;
-	padding: 15px;
-	display: block;
-	border-radius: 5px;
-	transition: background-color 0.3s;
-}
-.menu-item ul li a:hover {
-	background-color: #004d80;
-}
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: #f0f0f0;
+            overflow-x: auto;
+            overflow-y: hidden;
+            height: 100vh;
+            margin: 0;
+        }
+
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            width: 100%;
+        }
+
+        .tree {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            white-space: nowrap;
+        }
+
+        .tree ul {
+            padding-top: 20px;
+            position: relative;
+            display: flex;
+            flex-direction: row;
+            overflow: hidden;
+            white-space: nowrap;
+        }
+
+        .tree li {
+            display: inline-block;
+            text-align: center;
+            list-style-type: none;
+            position: relative;
+            padding: 10px;
+            vertical-align: top;
+        }
+
+        .tree li::before, .tree li::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            right: 50%;
+            border-top: 1px solid #ccc;
+            width: 50%;
+            height: 10px;
+        }
+
+        .tree li::after {
+            right: auto;
+            left: 50%;
+            border-left: 1px solid #ccc;
+        }
+
+        .tree li:only-child::after, .tree li:only-child::before {
+            display: none;
+        }
+
+        .tree li:only-child {
+            padding-top: 0;
+        }
+
+        .tree li:first-child::before, .tree li:last-child::after {
+            border: 0 none;
+        }
+
+        .tree li:last-child::before {
+            border-right: 1px solid #ccc;
+            border-radius: 0 5px 0 0;
+        }
+
+        .tree li:first-child::after {
+            border-radius: 5px 0 0 0;
+        }
+
+        .tree ul ul::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 50%;
+            border-left: 1px solid #ccc;
+            width: 0;
+            height: 20px;
+        }
+
+        .tree li a {
+            border: 1px solid #ccc;
+            padding: 10px;
+            display: inline-grid;
+            border-radius: 5px;
+            text-decoration: none;
+            background: #fff;
+            transition: .5s;
+            width: 120px;
+            height: 120px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
+
+        .tree li a img {
+            width: 50px;
+            height: 50px;
+            margin-bottom: 10px !important;
+            border-radius: 50%;
+            margin: auto;
+        }
+
+        .tree li a span {
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            color: #666;
+            padding: 8px;
+            font-size: 12px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-weight: 500;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: calc(100% - 50px);
+        }
+
+        /* Hover Section */
+        .tree li a:hover, .tree li a:hover i, .tree li a:hover span, .tree li a:hover+ul li a {
+            background: #c8e4f8;
+            color: #000;
+            border: 1px solid #94a0b4;
+        }
+
+        .tree li a:hover+ul li::after, .tree li a:hover+ul li::before, .tree li a:hover+ul::before, .tree li a:hover+ul ul::before {
+            border-color: #94a0b4;
+        }
+
+        /* Coordenadores lado a lado */
+        .coordenadores {
+            display: flex;
+            gap: 20px;
+            position: relative;
+        }
+
+        /* Conexões entre coordenadores */
+        .coordenador-connection {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 2px;
+            height: 20px; /* Ajuste conforme necessário */
+            background-color: #ccc;
+            transform: translate(-50%, -50%);
+            z-index: -1;
+        }
+
+        /* Conexões quando o mouse está sobre um coordenador */
+        .coordenador:hover ~ .coordenador-connection {
+            background-color: #94a0b4;
+        }
+
+        /* Lista de funcionários */
+        .funcionarios {
+            display: none;
+            padding-top: 10px;
+            display: flex;
+            flex-direction: row;
+            gap: 20px;
+        }
+
+        /* Funcionários brilham quando o mouse está sobre um coordenador */
+        .coordenador:hover ~ .funcionarios,
+        .coordenador.hover ~ .funcionarios {
+            display: flex;
+            opacity: 1;
+            transition: opacity 0.3s ease;
+        }
+
+        .funcionario-brilho {
+            transition: background-color 0.3s, transform 0.3s;
+        }
+
+        .coordenador:hover ~ .funcionarios .funcionario-brilho {
+            background-color: #c8e4f8;
+            transform: scale(1.05);
+        }
+
+        /* Menu */
+        .menu {
+            position: fixed;
+            width: 100%;
+            height: 90px;
+            background-color: rgb(28, 139, 172);
+            display: flex;
+            z-index: 1000; 
+        }
+
+        .menu ul {
+            list-style: none;
+            display: flex;
+            margin-left: 130px;
+            padding: 0;
+        }
+
+        .menu-item {
+            position: relative;
+        }
+
+        .menu-item > a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 20px;
+            padding: 30px;
+            display: block;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .menu-item > a:hover {
+            background-color: #0056b3;
+        }
+
+        .menu-item ul {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            background-color: rgb(28, 139, 172);
+            min-width: 200px;
+            display: none;
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        .menu-item:hover ul {
+            display: block;
+        }
+
+        .menu-item ul li {
+            margin: 0;
+        }
+
+        .menu-item ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 16px;
+            padding: 15px;
+            display: block;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .menu-item ul li a:hover {
+            background-color: #004d80;
+        }
