--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@
         }
 
         .tree ul {
-            padding-top: 20px;
+            padding-top: 50px;
             position: relative;
             display: flex;
             flex-direction: row;
@@ -52,8 +52,8 @@
             position: absolute;
             top: 0;
             right: 50%;
-            border-top: 1px solid #ccc;
-            width: 50%;
+            border-top: 2px solid #ccc;
+            width: 100%;
             height: 10px;
         }
 
@@ -91,11 +91,11 @@
             left: 50%;
             border-left: 1px solid #ccc;
             width: 0;
-            height: 20px;
+            height: 100%;
         }
 
         .tree li a {
-            border: 1px solid #ccc;
+            border: 2px solid #ccc;
             padding: 10px;
             display: inline-grid;
             border-radius: 5px;
@@ -146,25 +146,20 @@
         /* Coordenadores lado a lado */
         .coordenadores {
             display: flex;
-            gap: 20px;
+            gap: 25px;
+            margin-left: 22px;
             position: relative;
         }
 
         /* Conexões entre coordenadores */
         .coordenador-connection {
             position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 2px;
-            height: 20px; /* Ajuste conforme necessário */
+            top: 0;
+            width: 20px;
+            height: 100px; /* Ajuste conforme necessário */
             background-color: #ccc;
             transform: translate(-50%, -50%);
             z-index: -1;
-        }
-
-        /* Conexões quando o mouse está sobre um coordenador */
-        .coordenador:hover ~ .coordenador-connection {
-            background-color: #94a0b4;
         }
 
         /* Lista de funcionários */
@@ -173,24 +168,7 @@
             padding-top: 10px;
             display: flex;
             flex-direction: row;
-            gap: 20px;
-        }
-
-        /* Funcionários brilham quando o mouse está sobre um coordenador */
-        .coordenador:hover ~ .funcionarios,
-        .coordenador.hover ~ .funcionarios {
-            display: flex;
-            opacity: 1;
-            transition: opacity 0.3s ease;
-        }
-
-        .funcionario-brilho {
-            transition: background-color 0.3s, transform 0.3s;
-        }
-
-        .coordenador:hover ~ .funcionarios .funcionario-brilho {
-            background-color: #c8e4f8;
-            transform: scale(1.05);
+            gap: 35px;
         }
 
         /* Menu */
