--- a/css/style.css
+++ b/css/style.css
@@ -1,240 +1,272 @@
-        /* Estilos gerais */
-        * {
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-        }
+/* Estilos gerais */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
-        body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #f0f0f0;
-            overflow-x: auto;
-            overflow-y: hidden;
-            height: 100vh;
-            margin: 0;
-        }
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #f0f0f0;
+    overflow-x: scroll;
+    overflow-y: scroll;
+    height: 100vh;
+    margin: 0;
+}
 
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100%;
-            width: 100%;
-        }
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
 
-        .tree {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            white-space: nowrap;
-        }
+.tree {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    white-space: nowrap;
+}
 
-        .tree ul {
-            padding-top: 50px;
-            position: relative;
-            display: flex;
-            flex-direction: row;
-            overflow: hidden;
-            white-space: nowrap;
-        }
+.tree ul {
+    padding-top: 50px;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    white-space: nowrap;
+}
 
-        .tree li {
-            display: inline-block;
-            text-align: center;
-            list-style-type: none;
-            position: relative;
-            padding: 10px;
-            vertical-align: top;
-        }
+.tree li {
+    display: inline-block;
+    text-align: center;
+    list-style-type: none;
+    position: relative;
+    padding: 10px;
+    vertical-align: top;
+}
 
-        .tree li::before, .tree li::after {
-            content: '';
-            position: absolute;
-            top: 0;
-            right: 50px;
-            border-top: 2px solid #ccc;
-            width: 100%;
-            height: 10px;
-        }
+.tree li::before, .tree li::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 50px;
+    border-top: 2px solid #ccc;
+    width: 100%;
+    height: 10px;
+}
 
-        .tree li::after {
-            right: auto;
-            left: 50%;
-            border-left: 1px solid #ccc;
-        }
+.tree li::after {
+    right: auto;
+    left: 50%;
+    border-left: 1px solid #ccc;
+}
 
-        .tree li:only-child::after, .tree li:only-child::before {
-            display: none;
-        }
 
-        .tree li:only-child {
-            padding-top: 0;
-        }
+.tree li:only-child::after, .tree li:only-child::before {
+    display: none;
+}
 
-        .tree li:first-child::before, .tree li:last-child::after {
-            border: 0 none;
-        }
+.tree li:only-child {
+    padding-top: 0;
+}
 
-        .tree li:last-child::before {
-            border-right: 1px solid #ccc;
-            border-radius: 0 5px 0 0;
-        }
+.tree li:first-child::before, .tree li:last-child::after {
+    border: 0 none;
+}
 
-        .tree li:first-child::after {
-            border-radius: 5px 0 0 0;
-        }
+.tree li:last-child::before {
+    border-right: 1px solid #ccc;
+    border-radius: 0 5px 0 0;
+}
 
-        .tree ul ul::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 50%;
-            border-left: 1px solid #ccc;
-            width: 0;
-            height: 100%;
-        }
+.tree li:first-child::after {
+    border-radius: 5px 0 0 0;
+}
 
-        .tree li a {
-            border: 2px solid #ccc;
-            padding: 10px;
-            display: inline-grid;
-            border-radius: 5px;
-            text-decoration: none;
-            background: #fff;
-            transition: .5s;
-            width: 120px;
-            height: 120px;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
-        }
+.tree ul ul::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 50%;
+    border-left: 1px solid #ccc;
+    width: 0;
+    height: 100%;
+}
 
-        .tree li a img {
-            width: 50px;
-            height: 50px;
-            margin-bottom: 10px !important;
-            border-radius: 50%;
-            margin: auto;
-        }
+.tree li a {
+    border: 2px solid #ccc;
+    padding: 10px;
+    display: inline-flex; 
+    flex-direction: column; 
+    border-radius: 5px;
+    text-decoration: none;
+    background: #fff;
+    transition: .5s;
+    width: 120px;
+    height: auto; 
+    overflow: hidden; 
+    text-overflow: ellipsis;
+    white-space: normal; 
+}
 
-        .tree li a span {
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            color: #666;
-            padding: 8px;
-            font-size: 12px;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            font-weight: 500;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: calc(100% - 50px);
-        }
+.tree li a img {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 10px !important;
+    border-radius: 50%;
+    margin: auto;
+}
 
-        /* Hover Section */
-        .tree li a:hover, .tree li a:hover i, .tree li a:hover span, .tree li a:hover+ul li a {
-            background: #c8e4f8;
-            color: #000;
-            border: 1px solid #94a0b4;
-        }
+.tree li a span {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    color: #666;
+    padding: 8px;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow-wrap: break-word;
+    height: calc(100% - 50px);
+}
 
-        .tree li a:hover+ul li::after, .tree li a:hover+ul li::before, .tree li a:hover+ul::before, .tree li a:hover+ul ul::before {
-            border-color: #94a0b4;
-        }
+/* Hover Section */
+.tree li a:hover, .tree li a:hover i, .tree li a:hover span, .tree li a:hover+ul li a {
+    background: #c8e4f8;
+    color: #000;
+    border: 1px solid #94a0b4;
+}
 
-        /* Coordenadores lado a lado */
-        .coordenadores {
-            display: flex;
-            gap: 25px;
-            position: relative;
-            justify-content: center;
-        }
+.tree li a:hover+ul li::after, .tree li a:hover+ul li::before, .tree li a:hover+ul::before, .tree li a:hover+ul ul::before {
+    border-color: #94a0b4;
+}
 
-        /* Conexões entre coordenadores */
-        .coordenador-connection {
-            position: absolute;
-            top: 0;
-            width: 20px;
-            height: 100px; /* Ajuste conforme necessário */
-            background-color: #ccc;
-            transform: translate(-50%, -50%);
-            z-index: -1;
-        }
+/* Coordenadores lado a lado */
+.coordenadores {
+    display: flex;
+    padding-top: 20px;
+    gap: 25px;
+    position: relative;
+    justify-content: center;
+}
 
-        /* Lista de funcionários */
-        .funcionarios {
-            display: none;
-            padding-top: 10px;
-            flex-direction: row;
-            gap: 35px;
-        }
+/* Lista de funcionários */
+.funcionarios {
+    display: none;
+    padding-top: 10px;
+    flex-direction: row;
+    gap: 35px;
+}
 
-        /* Menu */
-        .menu {
-            position: fixed;
-            width: 100%;
-            height: 90px;
-            background-color: rgb(28, 139, 172);
-            display: flex;
-            z-index: 1000; 
-        }
 
-        .menu ul {
-            list-style: none;
-            display: flex;
-            margin-left: 130px;
-            padding: 0;
-        }
+/* Ajuste a posição das linhas de conexão */
+.tree-node {
+    position: relative;
+}
 
-        .menu-item {
-            position: relative;
-        }
+/* Conectores entre setores */
+.tree-node {
+    position: relative; /* Necessário para posicionar a linha */
+}
 
-        .menu-item > a {
-            color: #fff;
-            text-decoration: none;
-            font-size: 20px;
-            padding: 30px;
-            display: block;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
+/* Menu */
+.menu {
+    position: fixed;
+    width: 100%;
+    height: 90px;
+    background-color: rgb(28, 139, 172);
+    display: flex;
+    z-index: 1000;
+}
 
-        .menu-item > a:hover {
-            background-color: #0056b3;
-        }
+.line {
+    position: absolute;
+    background-color: blue;
+    z-index: -1;
+}
 
-        .menu-item ul {
-            position: absolute;
-            top: 100%;
-            left: 0;
-            background-color: rgb(28, 139, 172);
-            min-width: 200px;
-            display: none;
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
+.menu ul {
+    list-style: none;
+    display: flex;
+    margin-left: 130px;
+    padding: 0;
+}
 
-        .menu-item:hover ul {
-            display: block;
-        }
+.menu-item {
+    position: relative;
+}
 
-        .menu-item ul li {
-            margin: 0;
-        }
+.menu-item > a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 30px;
+    display: block;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
 
-        .menu-item ul li a {
-            color: #fff;
-            text-decoration: none;
-            font-size: 16px;
-            padding: 15px;
-            display: block;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
+.menu-item > a:hover {
+    background-color: #0056b3;
+}
 
-        .menu-item ul li a:hover {
-            background-color: #004d80;
-        }
+.menu-item ul {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: rgb(28, 139, 172);
+    min-width: 200px;
+    display: none;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.menu-item:hover ul {
+    display: block;
+}
+
+.menu-item ul li {
+    margin: 0;
+}
+
+.menu-item ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 16px;
+    padding: 15px;
+    display: block;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.menu-item ul li a:hover {
+    background-color: #004d80;
+}
+
+.lines {
+    width: 3px;
+    height: 198px;
+    display: flex;
+    position: absolute;
+    align-items: center;
+    margin-top: 580px;
+    margin-left: 960px;
+    background-color: blue;
+}
+
+.lines .middleline {
+    width: 200px;
+    height: 3px;
+    display: flex;
+    position: absolute;
+    align-items: center;
+    margin-top: -190px;
+    margin-left: 4px;
+    background-color: blue;
+}
