--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 .tree {
-    margin-top: 100px;
+    margin-top: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,11 +31,13 @@ body {
 }
 
 .tree ul {
-    padding-top: 50px;
+    padding-top: 10px; /* Ajuste reduzido para diminuir a distância entre os níveis */
     position: relative;
     display: flex;
     flex-direction: row;
-    overflow: hidden;
+    overflow: hidden; /* Esconde qualquer linha que ultrapasse o container */
+    height: auto; /* Ajusta a altura conforme necessário */
+    max-height: 100%; /* Ajuste para o tamanho desejado */
     white-space: nowrap;
 }
 
@@ -46,24 +48,29 @@ body {
     position: relative;
     padding: 10px;
     vertical-align: top;
+    box-sizing: border-box;
 }
 
 .tree li::before, .tree li::after {
     content: '';
     position: absolute;
     top: 0;
-    right: 50px;
     border-top: 2px solid #ccc;
     width: 100%;
     height: 10px;
 }
 
-.tree li::after {
-    right: auto;
-    left: 50%;
-    border-left: 1px solid #ccc;
+.tree li::before {
+    right: 50%;
+    border-right: 1px solid #ccc;
+    border-radius: 0 5px 0 0;
 }
 
+.tree li::after {
+    left: 50%;
+    border-left: 1px solid #ccc;
+    border-radius: 5px 0 0 0;
+}
 
 .tree li:only-child::after, .tree li:only-child::before {
     display: none;
@@ -86,14 +93,60 @@ body {
     border-radius: 5px 0 0 0;
 }
 
+.tree-node > ul::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 50%;
+    border-left: 2px solid #ccc;
+    height: calc(100% + 10px); /* Ajuste a altura para que não ultrapasse o container */
+    z-index: 0; /* Garanta que a linha está abaixo do conteúdo */
+}
+
 .tree ul ul::before {
     content: '';
     position: absolute;
     top: 0;
     left: 50%;
-    border-left: 1px solid #ccc;
+    border-left: 2px solid #ccc;
     width: 0;
-    height: 100%;
+    height: 10px; /* Ajuste conforme necessário para limitar a altura */
+}
+
+/* Ajuste a posição das linhas de conexão */
+.tree-node {
+    position: relative;
+}
+
+/* Linhas de conexão dos coordenadores */
+.coordenadores {
+    display: flex;
+    padding-top: 20px;
+    gap: 35px; /* Ajuste reduzido para diminuir o espaço entre os coordenadores */
+    position: relative;
+    justify-content: center;
+}
+
+/* Linha horizontal superior */
+.coordenadores::before {
+    content: '';
+    position: absolute;
+    top:10%;
+    left: 45%;
+    width: 10%;
+    border-top: 2px solid #ccc;
+    z-index: -1;
+}
+
+.coordenadores .vertical-line {
+    position: absolute;
+    top: 3%; /* Alinha a linha vertical no meio dos coordenadores */
+    left: 50.09%; /* Centraliza a linha vertical */
+    height: 149px; /* Ajuste a altura conforme necessário */
+    width: 2px; /* Largura da linha vertical */
+    background-color: #ccc; /* Cor da linha vertical */
+    z-index: -1;
+    transform: translateX(-50%); /* Ajusta a posição da linha para centralizá-la */
 }
 
 .tree li a {
@@ -105,8 +158,8 @@ body {
     text-decoration: none;
     background: #fff;
     transition: .5s;
-    width: 120px;
-    height: auto; 
+    width: 150px; /* Ajuste a largura conforme necessário */
+    height: 120px; /* Ajuste a altura conforme necessário */
     overflow: hidden; 
     text-overflow: ellipsis;
     white-space: normal; 
@@ -133,7 +186,7 @@ body {
     justify-content: center;
     align-items: center;
     overflow-wrap: break-word;
-    height: calc(100% - 50px);
+    height: auto;
 }
 
 /* Hover Section */
@@ -147,13 +200,10 @@ body {
     border-color: #94a0b4;
 }
 
-/* Coordenadores lado a lado */
-.coordenadores {
-    display: flex;
-    padding-top: 20px;
-    gap: 25px;
-    position: relative;
-    justify-content: center;
+.node-link.setor:hover ~ .coordenadores .coordenador {
+    background: #c8e4f8;
+    color: #000;
+    border: 1px solid #94a0b4;
 }
 
 /* Lista de funcionários */
@@ -164,17 +214,6 @@ body {
     gap: 35px;
 }
 
-
-/* Ajuste a posição das linhas de conexão */
-.tree-node {
-    position: relative;
-}
-
-/* Conectores entre setores */
-.tree-node {
-    position: relative; /* Necessário para posicionar a linha */
-}
-
 /* Menu */
 .menu {
     position: fixed;
@@ -183,12 +222,6 @@ body {
     background-color: rgb(28, 139, 172);
     display: flex;
     z-index: 1000;
-}
-
-.line {
-    position: absolute;
-    background-color: blue;
-    z-index: -1;
 }
 
 .menu ul {
@@ -248,26 +281,4 @@ body {
 
 .menu-item ul li a:hover {
     background-color: #004d80;
-}
-
-.lines {
-    width: 3px;
-    height: 198px;
-    display: flex;
-    position: absolute;
-    align-items: center;
-    margin-top: 580px;
-    margin-left: 960px;
-    background-color: blue;
-}
-
-.lines .middleline {
-    width: 200px;
-    height: 3px;
-    display: flex;
-    position: absolute;
-    align-items: center;
-    margin-top: -190px;
-    margin-left: 4px;
-    background-color: blue;
 }
