mod: estagiarios da gestão

--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,13 @@ body {
 .coordenadores {
     display: flex;
     padding-top: 20px;
-    gap: 35px; /* Ajuste reduzido para diminuir o espaço entre os coordenadores */
+    gap: 105px; /* Ajuste reduzido para diminuir o espaço entre os coordenadores */
+    position: relative;
+    justify-content: center;
+}
+
+.gestao-estagiarios {
+    display: flex;
     position: relative;
     justify-content: center;
 }
@@ -141,7 +147,7 @@ body {
 .coordenadores .vertical-line {
     position: absolute;
     top: 3%; /* Alinha a linha vertical no meio dos coordenadores */
-    left: 50.09%; /* Centraliza a linha vertical */
+    left: 53.2%; /* Centraliza a linha vertical */
     height: 149px; /* Ajuste a altura conforme necessário */
     width: 2px; /* Largura da linha vertical */
     background-color: #ccc; /* Cor da linha vertical */
@@ -164,6 +170,7 @@ body {
     text-overflow: ellipsis;
     white-space: normal; 
 }
+
 
 .tree li a img {
     width: 50px;
