--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
     display: flex;
     align-items: flex-start; /* Alinha ao topo */
     position: center;
-    margin-left: 300px;
+    margin-left: 500px;
     width: 100%;
     min-width: 2000px;
     height: auto; /* Permite o ajuste da altura conforme o conteúdo */
@@ -162,9 +162,9 @@ body {
 
 .tree li a img {
     width: 70px;
-    height: 75px;
+    height: 80px;
     margin-bottom: 7px !important;
-    border-radius: 50%;
+    border-radius: 30%;
     margin: auto;
 }
 
@@ -181,6 +181,14 @@ body {
     justify-content: center;
     align-items: center;
     overflow-wrap: break-word;
+    height: auto;
+}
+
+.tree li a p {
+    padding-top: -5px;
+    padding-bottom: 3px;
+    font-size: 11px;
+    font-weight: 500;
     height: auto;
 }
 
