--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,15 @@ body {
     z-index: -1;
 }
 
+.node-link.setor + .funcionarios {
+    display: none; /* Certifica que setores estão inicialmente ocultos */
+}
+
+.node-link.funcionario + .sub-funcionarios {
+    display: none; /* Certifica que funcionários estão inicialmente ocultos */
+}
+
+
 .tree-node {
     position: relative;
     display: flex;
@@ -140,7 +149,7 @@ body {
 
 .node-link-chefe {
     margin-top: -160px;
-    margin-left: 25px;
+    margin-left: 55px;
     display: flex;
     position: absolute;
 }
@@ -159,11 +168,25 @@ body {
     height: 500px; /* Altura total da seção */
     background-color: #ccc; /* Cor da linha */
     z-index: -1; /* Fica atrás dos outros elementos */
+    
 }
 
-.sub-funcionarios {
+.sub-sub-funcionarios {
     display: flex;
+    gap: 10px; /* Espaçamento entre os itens */
+    padding: 0;
+    margin: 0;
 }
+
+/* Ajusta a largura dos itens para 3 itens por linha */
+.sub-sub-funcionarios .tree-node {
+    flex: 1 1 calc(33.333% - 10px); /* Três itens por linha, menos o gap */
+    padding: 10px;
+    display: grid;
+    transition: background 0.3s;
+    min-width: 150px;
+}
+
 
 .coordenadores {
     display: flex;
