--- a/css/style.css
+++ b/css/style.css
@@ -349,7 +349,8 @@ body {
     flex-direction: column;
     border-radius: 10px;
     text-decoration: none;
-    background: #b7dcee;
+    background-color: #b7dcee;
+    background: linear-gradient(to top, rgba(79, 185, 218, 0.512), rgb(55, 157, 194));
     transition: .5s;
     width: 140px;
     height: 165px;
@@ -538,12 +539,13 @@ body {
 
 .parceiro-setor .node-link {
     background-color: #fff; /* Cor de fundo */
+    background: #fff;
     border: 1px solid #06050553; /* Cor da borda */
     color: #000; /* Cor do texto */
 }
 
 .parceiro-setor .node-link:hover .node-label:hover {
-    background-color: rgb(108, 195, 222); /* Cor de fundo ao passar o mouse */
+    background-color: rgb(255, 255, 255); /* Cor de fundo ao passar o mouse */
     border-color: #0a05005e; /* Cor da borda ao passar o mouse */
 }
 
